# zise

./: .gitignore  CHANGELOG.md  README.md  index.html
.github/workflows/: cd.yml  ci.yml
assets/: index.34593fb9.js  index.44b90f2c.css  index.4a0eccda.js  index.6d44ee3b.css  index.be101854.js
example/: .gitignore  CMakeLists.txt  main.c
example/lib1/: bar.c  foo.c  lib1.h
example/lib2/submodule1/: foo.c  submodule1.h
example/lib2/submodule2/: bar.c  submodule2.h
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte
frontend/src/components/: TextLoader.svelte  TreeTable.svelte  TreeTableRow.svelte
frontend/src/libs/: path.js  path.test.js  text-parser.js  text-parser.test.js
